brat/test/golden/error/badvec4.brat.golden
Error in test/golden/error/badvec4.brat@FC {start = Pos {line = 2, col = 7}, end = Pos {line = 2, col = 10}}:
v3 = [1,2]
      ^^^

  Expected vector of length 3
from the type:  Vec(Int, 3)
but got vector: [1,2]
of length 2


